src/test/ui/empty/empty-never-array.stderr
error[E0005]: refutable pattern in local binding: `T(_, _)` not covered
  --> $DIR/empty-never-array.rs:10:9
   |
LL | / enum Helper<T, U> {
LL | |     T(T, [!; 0]),
LL | |     #[allow(dead_code)]
LL | |     U(U),
LL | | }
   | |_- `Helper<T, U>` defined here
...
LL |       let Helper::U(u) = Helper::T(t, []);
   |           ^^^^^^^^^^^^ pattern `T(_, _)` not covered

warning[E0381]: use of possibly uninitialized variable: `u`
  --> $DIR/empty-never-array.rs:12:5
   |
LL |     u
   |     ^ use of possibly uninitialized `u`
   |
   = warning: this error has been downgraded to a warning for backwards compatibility with previous releases
   = warning: this represents potential undefined behavior in your code and this warning will become a hard error in the future
   = note: for more information, try `rustc --explain E0729`

error: aborting due to previous error

Some errors have detailed explanations: E0005, E0381.
For more information about an error, try `rustc --explain E0005`.
